--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "mongoose": "^9.0.1",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
+    "razorpay": "^2.9.6",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
@@ -64,6 +65,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
     "zod": "3.25.76"
   },
   "devDependencies": {
